fix: dropdown optionItem color on mobile

--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -73,6 +73,7 @@
   padding: 12px 18px;
   cursor: pointer;
   transition: background-color 0.2s;
+  color: var(--dark-grey);
 }
 
 .optionItem:hover {
